@@ -1,0 +1,32 @@
+#! /usr/bin/perl -w
+# Test suite for the functional interface
+# Copyright (c) 2003 imacat. All rights reserved. This program is free
+# software; you can redistribute it and/or modify it under the same terms
+# as Perl itself.
+
+use 5.008;
+use strict;
+use warnings;
+use Test;
+
+BEGIN { plan tests => 2 }
+
+use FindBin;
+use File::Spec::Functions qw(catdir catfile);
+use lib $FindBin::Bin;
+use vars qw($LOCALEDIR);
+$LOCALEDIR = catdir($FindBin::Bin, "locale");
+
+# Functional interface
+use vars qw($lh1 $lh2);
+eval {
+    use Locale::Maketext::Gettext::Functions;
+    bindtextdomain("test", $LOCALEDIR);
+    textdomain("test");
+    get_handle("en");
+    $_ = maketext("Hello, world!");
+};
+# 1
+ok($@, "");
+# 2
+ok($_, "Hiya :)");
